<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/couleur_de_font"
    tools:context=".Activities.Sing_in_sind_up">

    <ImageView
        android:id="@+id/logo_polyFast"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/polifast"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/layout_reset"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            >


            <EditText
                android:id="@+id/password_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mot_de_passe"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/empty_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrer_votre_mot_de_passe"
                android:textColor="@color/red"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/error_caracter_of_password_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/error_caracter"
                android:textColor="@color/red"
                android:visibility="gone"
                />

            <EditText
                android:id="@+id/confirm_password_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmer_votre_mot_de_passe"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPassword"
                tools:ignore="Autofill" />

            <TextView
                android:id="@+id/empty_confirm_password_change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmer_votre_mot_de_passe"
                android:textColor="@color/red"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/error_match_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_match"
                android:textColor="@color/red"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/button_send_paasword_change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/envoyer"
                    android:layout_weight="50"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/button_back_of_reset_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/back"
                    android:layout_weight="50"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


</RelativeLayout>