<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:background="@color/colorAccentLight"
        android:layout_height="2dp"/>
    <TextView
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:paddingHorizontal="10dp"
        android:textColor="@color/dark"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:text="@string/text_answer_or_question" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/answer_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:elevation="6dp"
                android:paddingHorizontal="10dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_answer"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textColor="@color/white"
                android:background="@drawable/button_primary_bg"
                android:text="@string/answer_question" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/ask_question_btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_ask_question"
                android:drawableTint="@color/colorPrimary"
                android:singleLine="true"
                android:ellipsize="end"
                android:background="@drawable/button_primary_ripple_bg"
                android:elevation="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/ask_question" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy" />

</LinearLayout>