<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="4dp"
            android:background="@color/colorAccent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-104dp"
            tools:ignore="UnusedAttribute" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <ImageButton
            android:id="@+id/close_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:elevation="5dp"
            android:background="@drawable/button_close_bottom_sheet_bg"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:srcCompat="@drawable/ic_close"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/close" />

        <TextView
            android:id="@+id/user_concern"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:elevation="4dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/comment_concern"
            android:textColor="@color/dark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/add_comment_btn"
            app:layout_constraintStart_toEndOf="@+id/close_btn"
            app:layout_constraintTop_toTopOf="@+id/view"
            tools:ignore="UnusedAttribute" />

        <ImageButton
            android:id="@+id/add_comment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_add_comment_bg"
            android:contentDescription="@string/add_comment"
            android:elevation="6dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="UnusedAttribute"
            app:srcCompat="@drawable/ic_add_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>